--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 name = "datamesh"
 path = "src/main.rs"
 
+[lib]
+name = "datamesh"
+path = "src/lib.rs"
+
 [dependencies]
 libp2p = { version = "0.56.0", features = ["kad", "noise", "tcp", "yamux", "macros", "tokio"] }
 tokio = { version = "1.46.0", features = ["full"] }
@@ -34,6 +38,16 @@ colored = "2.1.0"
 glob = "0.3.1"
 regex = "1.10.2"
 notify = "6.1.1"
+tar = "0.4"
+uuid = { version = "1.0", features = ["v4"] }
+
+# Security enhancements
+argon2 = "0.5"
+aes-gcm = "0.10"
+bincode = "1.3"
+rpassword = "7.3"
+libc = "0.2"
+hostname = "0.3"
 
 [dev-dependencies]
 tempfile = "3.0"
