--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,8 @@ notify = "6.1.1"
 tar = "0.4"
 uuid = { version = "1.0", features = ["v4", "serde"] }
 thiserror = "1.0"
+sled = "0.34"
+lru = "0.12"
 
 # Security enhancements
 argon2 = "0.5"
