--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ libc = "0.2"
 hostname = "0.3"
 fastrand = "2.3.0"
 async-trait = "0.1"
+jsonwebtoken = "9.3"
 
 [dev-dependencies]
 tempfile = "3.0"
