--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,3 +73,26 @@ jsonwebtoken = "9.3"
 [dev-dependencies]
 tempfile = "3.0"
 tokio-test = "0.4"
+criterion = "0.5"
+proptest = "1.0"
+mockall = "0.12"
+wiremock = "0.6"
+tracing-test = "0.2"
+
+# Benches
+[[bench]]
+name = "crypto_benchmarks"
+harness = false
+
+[[bench]]
+name = "network_benchmarks"
+harness = false
+
+[[bench]]
+name = "storage_benchmarks"
+harness = false
+
+[features]
+default = []
+benchmarks = []
+integration-tests = []
