Add enhanced unit tests and utility functions for DataMesh
- Introduced a comprehensive test suite in `enhanced_unit_tests_fixed.rs` to validate core functionality across all modules.
- Added a new test suite in `enhanced_unit_tests_new.rs` with improved test cases and performance checks.
- Created a `test_utils.rs` module providing common utilities and setup functions for testing, enhancing reliability and reducing duplication.
- Implemented a new `test_utils_new.rs` with updated structures and mock data generation for user accounts and subscription tiers.
- Enhanced performance testing utilities to measure and validate operation durations effectively.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,6 +78,8 @@ proptest = "1.0"
 mockall = "0.12"
 wiremock = "0.6"
 tracing-test = "0.2"
+sha256 = "1.5"
+mime_guess = "2.0"
 
 # Benches
 [[bench]]
