feat: add Network, Register, Settings, and Upload pages with basic structure
feat: implement authentication store with login, registration, and logout functionality

feat: create theme store for managing light, dark, and system themes

style: add global styles and Tailwind CSS configuration

feat: implement API utility functions for handling requests and file uploads

feat: add utility function for class name merging

chore: configure Vite for development and production builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ rand = "0.8"
 ecies = { version = "0.2.9", default-features = false, features = ["pure"] }
 reed-solomon-erasure = "6.0.0"
 clap = { version = "4.5.40", features = ["derive"] }
+clap_complete = "4.5"
 blake3 = "1.8.2"
 hex = "0.4.3"
 chrono = { version = "0.4.41", features = ["serde"] }
