--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -8,7 +8,10 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.ts --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "dependencies": {
     "vue": "^3.3.4",
@@ -32,7 +35,13 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
-    "sass": "^1.67.0"
+    "sass": "^1.67.0",
+    "vitest": "^0.34.6",
+    "@vitest/ui": "^0.34.6",
+    "@vue/test-utils": "^2.4.1",
+    "jsdom": "^22.1.0",
+    "@vitest/coverage-v8": "^0.34.6",
+    "happy-dom": "^10.0.3"
   },
   "keywords": [
     "datamesh",
