--- a/web-interface/package.json
+++ b/web-interface/package.json
@@ -27,7 +27,15 @@
     "dayjs": "^1.11.9",
     "file-saver": "^2.0.5",
     "mime-types": "^2.1.35",
-    "vue-upload-component": "^3.1.4"
+    "vue-upload-component": "^3.1.4",
+    "vue-i18n": "^9.2.2",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0",
+    "workbox-cacheable-response": "^7.0.0",
+    "workbox-expiration": "^7.0.0",
+    "workbox-background-sync": "^7.0.0",
+    "workbox-broadcast-update": "^7.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.4.0",
