Add property-based tests, enhanced test runner, and security integration tests
- Introduced a comprehensive suite of property-based tests for various components of the DataMesh system, including encryption, database consistency, economic calculations, user account limits, file metadata integrity, storage quota enforcement, and concurrent operations safety.
- Developed an enhanced test runner script to facilitate categorized, parallel execution of tests with detailed reporting and performance benchmarking.
- Implemented security integration tests to validate cryptographic operations, key management, key rotation, and user isolation under concurrent loads.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -83,6 +83,9 @@ wiremock = "0.6"
 tracing-test = "0.2"
 sha256 = "1.5"
 mime_guess = "2.0"
+# Additional dependencies for enhanced testing
+tokio-tungstenite = "0.21"
+reqwest = { version = "0.11", features = ["json", "multipart"], default-features = false }
 
 # Benches
 [[bench]]
