Add debug script for diagnosing startup issues
- Implemented a Rust script to check the status of the DataMesh binary.
- Added tests for various commands including version check, wizard trigger, bootstrap command, interactive mode, and help output.
- Each test captures and displays the exit code, stdout, and stderr for better diagnostics.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ thiserror = "1.0"
 sled = "0.34"
 lru = "0.12"
 bs58 = "0.5"
+atty = "0.2"
 
 # REST API dependencies
 axum = { version = "0.7", features = ["multipart", "ws"] }
